Updating the documentation for version 1.0.6

--- a/phpdoc/Patterns/Abstracts/AbstractOptionable.html
+++ b/phpdoc/Patterns/Abstracts/AbstractOptionable.html
@@ -12,6 +12,7 @@
             <li><a href="../../classes.html">Classes</a></li>
                             <li><a href="../../namespaces.html">Namespaces</a></li>
                         <li><a href="../../interfaces.html">Interfaces</a></li>
+            <li><a href="../../traits.html">Traits</a></li>
             <li><a href="../../doc-index.html">Index</a></li>
             
         </ul>
@@ -22,7 +23,8 @@
     <h1><a href="../../Patterns/Abstracts.html">Patterns\Abstracts</a>\AbstractOptionable</h1>
     </div>
         <div class="content">
-                <p>abstract class    <strong>AbstractOptionable</strong>        implements
+                <p>abstract     class
+    <strong>AbstractOptionable</strong>        implements
         <a href="../../Patterns/Interfaces/OptionableInterface.html"><abbr title="Patterns\Interfaces\OptionableInterface">OptionableInterface</abbr></a></p>
 
             <div class="description">
@@ -83,7 +85,7 @@ a default value returned if no other value is found.</p>
         <h2>Details</h2>
 
                         <h3 id="method_setOptions">
-        <div class="location">at line 38</div>
+        <div class="location">at line 39</div>
         <code>            public            <a href="../../Patterns/Abstracts/AbstractOptionable.html"><abbr title="Patterns\Abstracts\AbstractOptionable">AbstractOptionable</abbr></a>
     <strong>setOptions</strong>(array $options)</code>
     </h3>
@@ -118,7 +120,7 @@ a default value returned if no other value is found.</p>
     </div>
 
                 <h3 id="method_setOption">
-        <div class="location">at line 51</div>
+        <div class="location">at line 52</div>
         <code>            public            <a href="../../Patterns/Abstracts/AbstractOptionable.html"><abbr title="Patterns\Abstracts\AbstractOptionable">AbstractOptionable</abbr></a>
     <strong>setOption</strong>(string $name, <abbr title="Patterns\Abstracts\misc">misc</abbr> $value)</code>
     </h3>
@@ -158,7 +160,7 @@ a default value returned if no other value is found.</p>
     </div>
 
                 <h3 id="method_getOptions">
-        <div class="location">at line 62</div>
+        <div class="location">at line 63</div>
         <code>            public            array
     <strong>getOptions</strong>()</code>
     </h3>
@@ -183,7 +185,7 @@ a default value returned if no other value is found.</p>
     </div>
 
                 <h3 id="method_getOption">
-        <div class="location">at line 74</div>
+        <div class="location">at line 75</div>
         <code>            public            array
     <strong>getOption</strong>(string $name, <abbr title="Patterns\Abstracts\misc">misc</abbr> $default = null)</code>
     </h3>
