--- a/phpdoc/Patterns/Abstracts/AbstractSingleton.html
+++ b/phpdoc/Patterns/Abstracts/AbstractSingleton.html
@@ -12,6 +12,7 @@
             <li><a href="../../classes.html">Classes</a></li>
                             <li><a href="../../namespaces.html">Namespaces</a></li>
                         <li><a href="../../interfaces.html">Interfaces</a></li>
+            <li><a href="../../traits.html">Traits</a></li>
             <li><a href="../../doc-index.html">Index</a></li>
             
         </ul>
@@ -22,7 +23,8 @@
     <h1><a href="../../Patterns/Abstracts.html">Patterns\Abstracts</a>\AbstractSingleton</h1>
     </div>
         <div class="content">
-                <p>abstract class    <strong>AbstractSingleton</strong></p>
+                <p>abstract     class
+    <strong>AbstractSingleton</strong></p>
 
             <div class="description">
             <p>A singleton abstract class</p>
@@ -87,7 +89,7 @@ or <code>init</code> method.</p>
         <h2>Details</h2>
 
                         <h3 id="method_getInstance">
-        <div class="location">at line 72</div>
+        <div class="location">at line 73</div>
         <code>        static    public            object
     <strong>getInstance</strong>()</code>
     </h3>
@@ -112,7 +114,7 @@ or <code>init</code> method.</p>
     </div>
 
                 <h3 id="method_getInstanceByClassname">
-        <div class="location">at line 90</div>
+        <div class="location">at line 91</div>
         <code>        static    public            object
     <strong>getInstanceByClassname</strong>($classname)</code>
     </h3>
@@ -148,7 +150,7 @@ or <code>init</code> method.</p>
     </div>
 
                 <h3 id="method___clone">
-        <div class="location">at line 135</div>
+        <div class="location">at line 136</div>
         <code>            public            
     <strong>__clone</strong>()</code>
     </h3>
