--- a/phpdoc/Patterns/Commons/Collection.html
+++ b/phpdoc/Patterns/Commons/Collection.html
@@ -12,6 +12,7 @@
             <li><a href="../../classes.html">Classes</a></li>
                             <li><a href="../../namespaces.html">Namespaces</a></li>
                         <li><a href="../../interfaces.html">Interfaces</a></li>
+            <li><a href="../../traits.html">Traits</a></li>
             <li><a href="../../doc-index.html">Index</a></li>
             
         </ul>
@@ -22,7 +23,8 @@
     <h1><a href="../../Patterns/Commons.html">Patterns\Commons</a>\Collection</h1>
     </div>
         <div class="content">
-                <p>class    <strong>Collection</strong>        implements
+                <p>    class
+    <strong>Collection</strong>        implements
         <a href="../../Patterns/Interfaces/CollectionInterface.html"><abbr title="Patterns\Interfaces\CollectionInterface">CollectionInterface</abbr></a></p>
 
             <div class="description">
@@ -362,7 +364,7 @@
         <h2>Details</h2>
 
                         <h3 id="method___construct">
-        <div class="location">at line 37</div>
+        <div class="location">at line 38</div>
         <code>            public            
     <strong>__construct</strong>(array $content = array())</code>
     </h3>
@@ -388,7 +390,7 @@
     </div>
 
                 <h3 id="method_setCollection">
-        <div class="location">at line 48</div>
+        <div class="location">at line 49</div>
         <code>            public            <a href="../../Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a>
     <strong>setCollection</strong>(array $content)</code>
     </h3>
@@ -423,7 +425,7 @@
     </div>
 
                 <h3 id="method_getCollection">
-        <div class="location">at line 59</div>
+        <div class="location">at line 60</div>
         <code>            public            array
     <strong>getCollection</strong>()</code>
     </h3>
@@ -448,7 +450,7 @@
     </div>
 
                 <h3 id="method_rewind">
-        <div class="location">at line 73</div>
+        <div class="location">at line 74</div>
         <code>final            public            void
     <strong>rewind</strong>()</code>
     </h3>
@@ -474,7 +476,7 @@
     </div>
 
                 <h3 id="method_reset">
-        <div class="location">at line 82</div>
+        <div class="location">at line 83</div>
         <code>final            public            
     <strong>reset</strong>()</code>
     </h3>
@@ -490,7 +492,7 @@
     </div>
 
                 <h3 id="method_end">
-        <div class="location">at line 90</div>
+        <div class="location">at line 91</div>
         <code>final            public            
     <strong>end</strong>()</code>
     </h3>
@@ -506,7 +508,7 @@
     </div>
 
                 <h3 id="method_next">
-        <div class="location">at line 101</div>
+        <div class="location">at line 102</div>
         <code>final            public            void
     <strong>next</strong>()</code>
     </h3>
@@ -532,7 +534,7 @@
     </div>
 
                 <h3 id="method_prev">
-        <div class="location">at line 112</div>
+        <div class="location">at line 113</div>
         <code>final            public            void
     <strong>prev</strong>()</code>
     </h3>
@@ -558,7 +560,7 @@
     </div>
 
                 <h3 id="method_valid">
-        <div class="location">at line 123</div>
+        <div class="location">at line 124</div>
         <code>final            public            bool
     <strong>valid</strong>()</code>
     </h3>
@@ -583,7 +585,7 @@
     </div>
 
                 <h3 id="method_current">
-        <div class="location">at line 133</div>
+        <div class="location">at line 134</div>
         <code>final            public            <abbr title="Patterns\Commons\misc">misc</abbr>
     <strong>current</strong>()</code>
     </h3>
@@ -608,7 +610,7 @@
     </div>
 
                 <h3 id="method_pos">
-        <div class="location">at line 141</div>
+        <div class="location">at line 142</div>
         <code>final            public            
     <strong>pos</strong>()</code>
     </h3>
@@ -624,7 +626,7 @@
     </div>
 
                 <h3 id="method_key">
-        <div class="location">at line 151</div>
+        <div class="location">at line 152</div>
         <code>final            public            int
     <strong>key</strong>()</code>
     </h3>
@@ -649,7 +651,7 @@
     </div>
 
                 <h3 id="method_seek">
-        <div class="location">at line 162</div>
+        <div class="location">at line 163</div>
         <code>final            public            <a href="../../Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a>
     <strong>seek</strong>(int|string $index)</code>
     </h3>
@@ -686,7 +688,7 @@
     </div>
 
                 <h3 id="method_offsetSet">
-        <div class="location">at line 179</div>
+        <div class="location">at line 180</div>
         <code>final            public            
     <strong>offsetSet</strong>($offset, $value)</code>
     </h3>
@@ -728,7 +730,7 @@
     </div>
 
                 <h3 id="method_offsetExists">
-        <div class="location">at line 189</div>
+        <div class="location">at line 190</div>
         <code>final            public            
     <strong>offsetExists</strong>($offset)</code>
     </h3>
@@ -764,7 +766,7 @@
     </div>
 
                 <h3 id="method_offsetUnset">
-        <div class="location">at line 199</div>
+        <div class="location">at line 200</div>
         <code>final            public            
     <strong>offsetUnset</strong>($offset)</code>
     </h3>
@@ -800,7 +802,7 @@
     </div>
 
                 <h3 id="method_offsetGet">
-        <div class="location">at line 209</div>
+        <div class="location">at line 210</div>
         <code>final            public            
     <strong>offsetGet</strong>($offset)</code>
     </h3>
@@ -836,7 +838,7 @@
     </div>
 
                 <h3 id="method_push">
-        <div class="location">at line 224</div>
+        <div class="location">at line 225</div>
         <code>            public            <a href="../../Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a>
     <strong>push</strong>(<abbr title="Patterns\Commons\misc">misc</abbr> $value)</code>
     </h3>
@@ -871,7 +873,7 @@
     </div>
 
                 <h3 id="method_count">
-        <div class="location">at line 235</div>
+        <div class="location">at line 236</div>
         <code>            public            int
     <strong>count</strong>()</code>
     </h3>
@@ -896,7 +898,7 @@
     </div>
 
                 <h3 id="method_shift">
-        <div class="location">at line 245</div>
+        <div class="location">at line 246</div>
         <code>            public            <a href="../../Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a>
     <strong>shift</strong>()</code>
     </h3>
@@ -921,7 +923,7 @@
     </div>
 
                 <h3 id="method_pop">
-        <div class="location">at line 256</div>
+        <div class="location">at line 257</div>
         <code>            public            <a href="../../Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a>
     <strong>pop</strong>()</code>
     </h3>
@@ -946,7 +948,7 @@
     </div>
 
                 <h3 id="method_unshift">
-        <div class="location">at line 268</div>
+        <div class="location">at line 269</div>
         <code>            public            <a href="../../Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a>
     <strong>unshift</strong>(<abbr title="Patterns\Commons\misc">misc</abbr> $value)</code>
     </h3>
@@ -981,7 +983,7 @@
     </div>
 
                 <h3 id="method_each">
-        <div class="location">at line 279</div>
+        <div class="location">at line 280</div>
         <code>            public            array
     <strong>each</strong>()</code>
     </h3>
@@ -1006,7 +1008,7 @@
     </div>
 
                 <h3 id="method_in_array">
-        <div class="location">at line 291</div>
+        <div class="location">at line 292</div>
         <code>            public            bool
     <strong>in_array</strong>($value)</code>
     </h3>
@@ -1042,7 +1044,7 @@
     </div>
 
                 <h3 id="method_key_exists">
-        <div class="location">at line 301</div>
+        <div class="location">at line 302</div>
         <code>            public            bool
     <strong>key_exists</strong>($index)</code>
     </h3>
@@ -1078,7 +1080,7 @@
     </div>
 
                 <h3 id="method_values">
-        <div class="location">at line 311</div>
+        <div class="location">at line 312</div>
         <code>            public            array
     <strong>values</strong>()</code>
     </h3>
@@ -1103,7 +1105,7 @@
     </div>
 
                 <h3 id="method_keys">
-        <div class="location">at line 321</div>
+        <div class="location">at line 322</div>
         <code>            public            array
     <strong>keys</strong>()</code>
     </h3>
@@ -1128,7 +1130,7 @@
     </div>
 
                 <h3 id="method_getEntry">
-        <div class="location">at line 337</div>
+        <div class="location">at line 338</div>
         <code>            public            <abbr title="Patterns\Commons\misc">misc</abbr>
     <strong>getEntry</strong>(int|string $index, <abbr title="Patterns\Commons\misc">misc</abbr> $default = null)</code>
     </h3>
@@ -1168,7 +1170,7 @@
     </div>
 
                 <h3 id="method_setEntry">
-        <div class="location">at line 352</div>
+        <div class="location">at line 353</div>
         <code>            public            <a href="../../Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a>
     <strong>setEntry</strong>(int|string|null $index = null, <abbr title="Patterns\Commons\misc">misc</abbr> $value)</code>
     </h3>
@@ -1216,7 +1218,7 @@
     </div>
 
                 <h3 id="method_addEntry">
-        <div class="location">at line 366</div>
+        <div class="location">at line 367</div>
         <code>            public            
     <strong>addEntry</strong>($index = null, $value)</code>
     </h3>
@@ -1258,7 +1260,7 @@
     </div>
 
                 <h3 id="method_issetEntry">
-        <div class="location">at line 377</div>
+        <div class="location">at line 378</div>
         <code>            public            <a href="../../Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a>
     <strong>issetEntry</strong>(int|string $index)</code>
     </h3>
@@ -1293,7 +1295,7 @@
     </div>
 
                 <h3 id="method_unsetEntry">
-        <div class="location">at line 388</div>
+        <div class="location">at line 389</div>
         <code>            public            <a href="../../Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a>
     <strong>unsetEntry</strong>(int|string $index)</code>
     </h3>
