--- a/phpdoc/Patterns/Interfaces/CollectionInterface.html
+++ b/phpdoc/Patterns/Interfaces/CollectionInterface.html
@@ -12,6 +12,7 @@
             <li><a href="../../classes.html">Classes</a></li>
                             <li><a href="../../namespaces.html">Namespaces</a></li>
                         <li><a href="../../interfaces.html">Interfaces</a></li>
+            <li><a href="../../traits.html">Traits</a></li>
             <li><a href="../../doc-index.html">Index</a></li>
             
         </ul>
@@ -22,7 +23,8 @@
     <h1><a href="../../Patterns/Interfaces.html">Patterns\Interfaces</a>\CollectionInterface</h1>
     </div>
         <div class="content">
-                <p>interface    <strong>CollectionInterface</strong>        implements
+                <p>    interface
+    <strong>CollectionInterface</strong>        implements
         <a href="../../Patterns/Interfaces/IteratorInterface.html"><abbr title="Patterns\Interfaces\IteratorInterface">IteratorInterface</abbr></a>, <a href="../../Patterns/Interfaces/ArrayInterface.html"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a></p>
 
             <div class="description">
@@ -242,7 +244,7 @@
         <h2>Details</h2>
 
                         <h3 id="method_reset">
-        <div class="location">in <a href="../../Patterns/Interfaces/IteratorInterface.html#method_reset"><abbr title="Patterns\Interfaces\IteratorInterface">IteratorInterface</abbr></a> at line 26</div>
+        <div class="location">in <a href="../../Patterns/Interfaces/IteratorInterface.html#method_reset"><abbr title="Patterns\Interfaces\IteratorInterface">IteratorInterface</abbr></a> at line 29</div>
         <code>            public            
     <strong>reset</strong>()</code>
     </h3>
@@ -258,7 +260,7 @@
     </div>
 
                 <h3 id="method_end">
-        <div class="location">in <a href="../../Patterns/Interfaces/IteratorInterface.html#method_end"><abbr title="Patterns\Interfaces\IteratorInterface">IteratorInterface</abbr></a> at line 31</div>
+        <div class="location">in <a href="../../Patterns/Interfaces/IteratorInterface.html#method_end"><abbr title="Patterns\Interfaces\IteratorInterface">IteratorInterface</abbr></a> at line 34</div>
         <code>            public            
     <strong>end</strong>()</code>
     </h3>
@@ -274,7 +276,7 @@
     </div>
 
                 <h3 id="method_pos">
-        <div class="location">in <a href="../../Patterns/Interfaces/IteratorInterface.html#method_pos"><abbr title="Patterns\Interfaces\IteratorInterface">IteratorInterface</abbr></a> at line 37</div>
+        <div class="location">in <a href="../../Patterns/Interfaces/IteratorInterface.html#method_pos"><abbr title="Patterns\Interfaces\IteratorInterface">IteratorInterface</abbr></a> at line 40</div>
         <code>            public            
     <strong>pos</strong>()</code>
     </h3>
@@ -290,7 +292,7 @@
     </div>
 
                 <h3 id="method_prev">
-        <div class="location">in <a href="../../Patterns/Interfaces/IteratorInterface.html#method_prev"><abbr title="Patterns\Interfaces\IteratorInterface">IteratorInterface</abbr></a> at line 42</div>
+        <div class="location">in <a href="../../Patterns/Interfaces/IteratorInterface.html#method_prev"><abbr title="Patterns\Interfaces\IteratorInterface">IteratorInterface</abbr></a> at line 45</div>
         <code>            public            
     <strong>prev</strong>()</code>
     </h3>
@@ -306,7 +308,7 @@
     </div>
 
                 <h3 id="method_shift">
-        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_shift"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 23</div>
+        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_shift"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 26</div>
         <code>            public            
     <strong>shift</strong>()</code>
     </h3>
@@ -322,7 +324,7 @@
     </div>
 
                 <h3 id="method_pop">
-        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_pop"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 28</div>
+        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_pop"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 31</div>
         <code>            public            
     <strong>pop</strong>()</code>
     </h3>
@@ -338,7 +340,7 @@
     </div>
 
                 <h3 id="method_unshift">
-        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_unshift"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 34</div>
+        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_unshift"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 37</div>
         <code>            public            
     <strong>unshift</strong>(<abbr title="Patterns\Interfaces\misc">misc</abbr> $value)</code>
     </h3>
@@ -364,7 +366,7 @@
     </div>
 
                 <h3 id="method_push">
-        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_push"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 40</div>
+        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_push"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 43</div>
         <code>            public            
     <strong>push</strong>(<abbr title="Patterns\Interfaces\misc">misc</abbr> $value)</code>
     </h3>
@@ -390,7 +392,7 @@
     </div>
 
                 <h3 id="method_count">
-        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_count"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 45</div>
+        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_count"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 48</div>
         <code>            public            
     <strong>count</strong>()</code>
     </h3>
@@ -406,7 +408,7 @@
     </div>
 
                 <h3 id="method_each">
-        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_each"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 50</div>
+        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_each"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 53</div>
         <code>            public            
     <strong>each</strong>()</code>
     </h3>
@@ -422,7 +424,7 @@
     </div>
 
                 <h3 id="method_in_array">
-        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_in_array"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 55</div>
+        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_in_array"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 58</div>
         <code>            public            
     <strong>in_array</strong>($value)</code>
     </h3>
@@ -449,7 +451,7 @@
     </div>
 
                 <h3 id="method_key_exists">
-        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_key_exists"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 60</div>
+        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_key_exists"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 63</div>
         <code>            public            
     <strong>key_exists</strong>($index)</code>
     </h3>
@@ -476,7 +478,7 @@
     </div>
 
                 <h3 id="method_values">
-        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_values"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 65</div>
+        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_values"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 68</div>
         <code>            public            
     <strong>values</strong>()</code>
     </h3>
@@ -492,7 +494,7 @@
     </div>
 
                 <h3 id="method_keys">
-        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_keys"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 70</div>
+        <div class="location">in <a href="../../Patterns/Interfaces/ArrayInterface.html#method_keys"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a> at line 73</div>
         <code>            public            
     <strong>keys</strong>()</code>
     </h3>
@@ -508,7 +510,7 @@
     </div>
 
                 <h3 id="method_setCollection">
-        <div class="location">at line 28</div>
+        <div class="location">at line 29</div>
         <code>            public            
     <strong>setCollection</strong>(array $collection)</code>
     </h3>
@@ -535,7 +537,7 @@
     </div>
 
                 <h3 id="method_getCollection">
-        <div class="location">at line 33</div>
+        <div class="location">at line 34</div>
         <code>            public            
     <strong>getCollection</strong>()</code>
     </h3>
@@ -551,7 +553,7 @@
     </div>
 
                 <h3 id="method_getEntry">
-        <div class="location">at line 41</div>
+        <div class="location">at line 42</div>
         <code>            public            
     <strong>getEntry</strong>(int|string $index, <abbr title="Patterns\Interfaces\misc">misc</abbr> $default = null)</code>
     </h3>
@@ -582,7 +584,7 @@
     </div>
 
                 <h3 id="method_setEntry">
-        <div class="location">at line 51</div>
+        <div class="location">at line 52</div>
         <code>            public            
     <strong>setEntry</strong>(int|string|null $index = null, <abbr title="Patterns\Interfaces\misc">misc</abbr> $value)</code>
     </h3>
@@ -612,7 +614,7 @@
     </div>
 
                 <h3 id="method_issetEntry">
-        <div class="location">at line 58</div>
+        <div class="location">at line 59</div>
         <code>            public            
     <strong>issetEntry</strong>(int|string $index)</code>
     </h3>
@@ -638,7 +640,7 @@
     </div>
 
                 <h3 id="method_unsetEntry">
-        <div class="location">at line 65</div>
+        <div class="location">at line 66</div>
         <code>            public            
     <strong>unsetEntry</strong>(int|string $index)</code>
     </h3>
