--- a/phpdoc/Patterns/Abstracts/AbstractResponse.html
+++ b/phpdoc/Patterns/Abstracts/AbstractResponse.html
@@ -12,6 +12,7 @@
             <li><a href="../../classes.html">Classes</a></li>
                             <li><a href="../../namespaces.html">Namespaces</a></li>
                         <li><a href="../../interfaces.html">Interfaces</a></li>
+            <li><a href="../../traits.html">Traits</a></li>
             <li><a href="../../doc-index.html">Index</a></li>
             
         </ul>
@@ -22,7 +23,8 @@
     <h1><a href="../../Patterns/Abstracts.html">Patterns\Abstracts</a>\AbstractResponse</h1>
     </div>
         <div class="content">
-                <p>abstract class    <strong>AbstractResponse</strong></p>
+                <p>abstract     class
+    <strong>AbstractResponse</strong></p>
 
             <div class="description">
             <p>Global HTML response class  This class defines a very simple HTML response pattern with a content and a set of headers.</p>
