--- a/phpdoc/Patterns/Abstracts/AbstractStaticCreator.html
+++ b/phpdoc/Patterns/Abstracts/AbstractStaticCreator.html
@@ -12,6 +12,7 @@
             <li><a href="../../classes.html">Classes</a></li>
                             <li><a href="../../namespaces.html">Namespaces</a></li>
                         <li><a href="../../interfaces.html">Interfaces</a></li>
+            <li><a href="../../traits.html">Traits</a></li>
             <li><a href="../../doc-index.html">Index</a></li>
             
         </ul>
@@ -22,7 +23,8 @@
     <h1><a href="../../Patterns/Abstracts.html">Patterns\Abstracts</a>\AbstractStaticCreator</h1>
     </div>
         <div class="content">
-                <p>abstract class    <strong>AbstractStaticCreator</strong>        implements
+                <p>abstract     class
+    <strong>AbstractStaticCreator</strong>        implements
         <a href="../../Patterns/Interfaces/StaticCreatorInterface.html"><abbr title="Patterns\Interfaces\StaticCreatorInterface">StaticCreatorInterface</abbr></a></p>
 
             <div class="description">
@@ -75,7 +77,7 @@ on static creation (in non-static env) and by constructor.</p>
         <h2>Details</h2>
 
                         <h3 id="method_init">
-        <div class="location">at line 32</div>
+        <div class="location">at line 33</div>
         <code>    abstract        public            
     <strong>init</strong>()</code>
     </h3>
@@ -91,7 +93,7 @@ on static creation (in non-static env) and by constructor.</p>
     </div>
 
                 <h3 id="method___construct">
-        <div class="location">at line 39</div>
+        <div class="location">at line 40</div>
         <code>            public            
     <strong>__construct</strong>()</code>
     </h3>
@@ -106,7 +108,7 @@ on static creation (in non-static env) and by constructor.</p>
     </div>
 
                 <h3 id="method_create">
-        <div class="location">at line 51</div>
+        <div class="location">at line 52</div>
         <code>        static    public            <a href="../../Patterns/Abstracts/AbstractStaticCreator.html"><abbr title="Patterns\Abstracts\AbstractStaticCreator">AbstractStaticCreator</abbr></a>
     <strong>create</strong>()</code>
     </h3>
