--- a/phpdoc/Patterns/Commons/ConfigurationRegistry.html
+++ b/phpdoc/Patterns/Commons/ConfigurationRegistry.html
@@ -12,6 +12,7 @@
             <li><a href="../../classes.html">Classes</a></li>
                             <li><a href="../../namespaces.html">Namespaces</a></li>
                         <li><a href="../../interfaces.html">Interfaces</a></li>
+            <li><a href="../../traits.html">Traits</a></li>
             <li><a href="../../doc-index.html">Index</a></li>
             
         </ul>
@@ -22,7 +23,8 @@
     <h1><a href="../../Patterns/Commons.html">Patterns\Commons</a>\ConfigurationRegistry</h1>
     </div>
         <div class="content">
-                <p>class    <strong>ConfigurationRegistry</strong></p>
+                <p>    class
+    <strong>ConfigurationRegistry</strong></p>
 
             <div class="description">
             <p>A manager for a configuration registry as an array with a depth of 2  This class handles a simple and classic registry of values (stored in an array as <code>key=&gt;value</code> pairs) except that it accepts and manages the first depth keys of the array like a <code>scope</code> and permits to access values within scopes directly.</p>
