--- a/phpdoc/Patterns/Interfaces/ArrayInterface.html
+++ b/phpdoc/Patterns/Interfaces/ArrayInterface.html
@@ -12,6 +12,7 @@
             <li><a href="../../classes.html">Classes</a></li>
                             <li><a href="../../namespaces.html">Namespaces</a></li>
                         <li><a href="../../interfaces.html">Interfaces</a></li>
+            <li><a href="../../traits.html">Traits</a></li>
             <li><a href="../../doc-index.html">Index</a></li>
             
         </ul>
@@ -22,7 +23,8 @@
     <h1><a href="../../Patterns/Interfaces.html">Patterns\Interfaces</a>\ArrayInterface</h1>
     </div>
         <div class="content">
-                <p>interface    <strong>ArrayInterface</strong>        implements
+                <p>    interface
+    <strong>ArrayInterface</strong>        implements
         <a href="http://php.net/ArrayAccess"><abbr title="ArrayAccess">ArrayAccess</abbr></a></p>
 
             <div class="description">
@@ -142,7 +144,7 @@
         <h2>Details</h2>
 
                         <h3 id="method_shift">
-        <div class="location">at line 23</div>
+        <div class="location">at line 26</div>
         <code>            public            
     <strong>shift</strong>()</code>
     </h3>
@@ -158,7 +160,7 @@
     </div>
 
                 <h3 id="method_pop">
-        <div class="location">at line 28</div>
+        <div class="location">at line 31</div>
         <code>            public            
     <strong>pop</strong>()</code>
     </h3>
@@ -174,7 +176,7 @@
     </div>
 
                 <h3 id="method_unshift">
-        <div class="location">at line 34</div>
+        <div class="location">at line 37</div>
         <code>            public            
     <strong>unshift</strong>(<abbr title="Patterns\Interfaces\misc">misc</abbr> $value)</code>
     </h3>
@@ -200,7 +202,7 @@
     </div>
 
                 <h3 id="method_push">
-        <div class="location">at line 40</div>
+        <div class="location">at line 43</div>
         <code>            public            
     <strong>push</strong>(<abbr title="Patterns\Interfaces\misc">misc</abbr> $value)</code>
     </h3>
@@ -226,7 +228,7 @@
     </div>
 
                 <h3 id="method_count">
-        <div class="location">at line 45</div>
+        <div class="location">at line 48</div>
         <code>            public            
     <strong>count</strong>()</code>
     </h3>
@@ -242,7 +244,7 @@
     </div>
 
                 <h3 id="method_each">
-        <div class="location">at line 50</div>
+        <div class="location">at line 53</div>
         <code>            public            
     <strong>each</strong>()</code>
     </h3>
@@ -258,7 +260,7 @@
     </div>
 
                 <h3 id="method_in_array">
-        <div class="location">at line 55</div>
+        <div class="location">at line 58</div>
         <code>            public            
     <strong>in_array</strong>($value)</code>
     </h3>
@@ -285,7 +287,7 @@
     </div>
 
                 <h3 id="method_key_exists">
-        <div class="location">at line 60</div>
+        <div class="location">at line 63</div>
         <code>            public            
     <strong>key_exists</strong>($index)</code>
     </h3>
@@ -312,7 +314,7 @@
     </div>
 
                 <h3 id="method_values">
-        <div class="location">at line 65</div>
+        <div class="location">at line 68</div>
         <code>            public            
     <strong>values</strong>()</code>
     </h3>
@@ -328,7 +330,7 @@
     </div>
 
                 <h3 id="method_keys">
-        <div class="location">at line 70</div>
+        <div class="location">at line 73</div>
         <code>            public            
     <strong>keys</strong>()</code>
     </h3>
