--- a/phpdoc/Patterns/Interfaces/IteratorInterface.html
+++ b/phpdoc/Patterns/Interfaces/IteratorInterface.html
@@ -12,6 +12,7 @@
             <li><a href="../../classes.html">Classes</a></li>
                             <li><a href="../../namespaces.html">Namespaces</a></li>
                         <li><a href="../../interfaces.html">Interfaces</a></li>
+            <li><a href="../../traits.html">Traits</a></li>
             <li><a href="../../doc-index.html">Index</a></li>
             
         </ul>
@@ -22,7 +23,8 @@
     <h1><a href="../../Patterns/Interfaces.html">Patterns\Interfaces</a>\IteratorInterface</h1>
     </div>
         <div class="content">
-                <p>interface    <strong>IteratorInterface</strong>        implements
+                <p>    interface
+    <strong>IteratorInterface</strong>        implements
         <a href="http://php.net/SeekableIterator"><abbr title="SeekableIterator">SeekableIterator</abbr></a></p>
 
             <div class="description">
@@ -81,7 +83,7 @@
         <h2>Details</h2>
 
                         <h3 id="method_reset">
-        <div class="location">at line 26</div>
+        <div class="location">at line 29</div>
         <code>            public            
     <strong>reset</strong>()</code>
     </h3>
@@ -97,7 +99,7 @@
     </div>
 
                 <h3 id="method_end">
-        <div class="location">at line 31</div>
+        <div class="location">at line 34</div>
         <code>            public            
     <strong>end</strong>()</code>
     </h3>
@@ -113,7 +115,7 @@
     </div>
 
                 <h3 id="method_pos">
-        <div class="location">at line 37</div>
+        <div class="location">at line 40</div>
         <code>            public            
     <strong>pos</strong>()</code>
     </h3>
@@ -129,7 +131,7 @@
     </div>
 
                 <h3 id="method_prev">
-        <div class="location">at line 42</div>
+        <div class="location">at line 45</div>
         <code>            public            
     <strong>prev</strong>()</code>
     </h3>
