--- a/phpdoc/Patterns/Interfaces/ResponseInterface.html
+++ b/phpdoc/Patterns/Interfaces/ResponseInterface.html
@@ -12,6 +12,7 @@
             <li><a href="../../classes.html">Classes</a></li>
                             <li><a href="../../namespaces.html">Namespaces</a></li>
                         <li><a href="../../interfaces.html">Interfaces</a></li>
+            <li><a href="../../traits.html">Traits</a></li>
             <li><a href="../../doc-index.html">Index</a></li>
             
         </ul>
@@ -22,7 +23,8 @@
     <h1><a href="../../Patterns/Interfaces.html">Patterns\Interfaces</a>\ResponseInterface</h1>
     </div>
         <div class="content">
-                <p>interface    <strong>ResponseInterface</strong></p>
+                <p>    interface
+    <strong>ResponseInterface</strong></p>
 
             <div class="description">
             <p>Interface for classic response handling</p>
